Add stle to recipe list in index

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,15 @@
 #main{
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, serif;
     color: rgb(97, 47, 47);
     font-size: 32px;
     text-align: center;
+}
+
+ul{
+    font-family: 'Georgia', 'Times New Roman', monospace;
+}
+
+.recipe-list{
+    background-color: rgb(217, 255, 0);
+    font-size: 28px;
 }
